[package]
name = "mokaccino_c"
version = "0.8.0"
edition = "2024"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "staticlib"]
name = "mokaccino"

[profile.release]
panic = "abort"

[dependencies]
mokaccino = { version = "0.8.0", features = ["send", "serde"] }
h3o = "0.9.4"

[build-dependencies]
cbindgen="0.29.3"
